--- a/forms.html
+++ b/forms.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Ambey ITI - Home</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">	
+	<meta name="viewport" content="width=device-width">	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<link rel="icon" type="image/png" href="imgs/logo.png">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
