--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 		<div id="bg-5"></div>
 		<div class="popup" id="popupID">
 			<div class="inner">
-				<a href="#">
+				<a href="./forms.html" target="_blank">
 					<img src="https://media.giphy.com/media/Qv5C8L3dyOmwuz3LPe/giphy.gif">
 				</a>
 			</div>
@@ -99,23 +99,24 @@
 
 				<div class="outer-msg">
 					<div class="msg">
-						<img src="imgs/strange.jpg">
+						<img src="imgs/chairman.jpeg">
 						<div class="main-msg">
 							<span>Chairman's Message</span>
-							<p>In the current era of knowledge based economy, ITI education is to play a vital role in the socio-economic development of the country. The emergence of New India has created a palpable need for a large number of professionally trained young men and women having expertise in all field with hallmark of adaptability, quality consciousness, discipline and commitment to boost country's economic growth.</p>
+							<p>In the current era of knowledge based economy, ITI education is to play a vital role in the socio-economic development of the country. The emergence of New India has created a palpable need for a large number of professionally trained young men and women having expertise in all field with hallmark of adaptability, quality consciousness, discipline and commitment to boost country's economic growth. <br> <span>- Soni Singh</span> </p>
+
 						</div>
 					</div>
 					<hr>
 					<div class="msg">
-						<img src="imgs/ironman.jpg">
+						<img src="imgs/director.jpeg">
 						<div class="main-msg">
-							<span>Principal's Message</span>
-							<p>Saumya Industrial Training Institute, B-58, HIG, Petrol Line, World Bank, Kanpur, U.P is a sure success destination for trainees who want to excel in the present industrial scenario going in the country and worldwide. The Trained Trainees of Saumya Industrial Training Institute are employable and are being employed as these are trained to be industry ready are self-employed and are giving employment to other</p>
+							<span>Director's Message</span>
+							<p>Saumya Industrial Training Institute, B-58, HIG, Petrol Line, World Bank, Kanpur, U.P is a sure success destination for trainees who want to excel in the present industrial scenario going in the country and worldwide. The Trained Trainees of Saumya Industrial Training Institute are employable and are being employed as these are trained to be industry ready are self-employed and are giving employment to other. <br> <span>- KB Singh</span> </p></p>
 						</div>
 					</div>
 					<hr>
 					<div class="msg multiple">
-						<img src="imgs/space.jpg">
+						<img src="imgs/student.png">
 						<div class="main-msg multiple">
 							<span>Student Support</span>
 							<p>
@@ -127,7 +128,7 @@
 							</p>
 						</div>
 
-						<img src="imgs/icon.png">
+						<img src="imgs/admission.png">
 						<div class="main-msg multiple">
 							<span>Courses Offered</span>
 							<p>
@@ -140,7 +141,7 @@
 					</div>
 					<hr>
 					<div class="msg multiple">
-						<img src="imgs/space.jpg">
+						<img src="imgs/news.png">
 						<div class="main-msg multiple">
 							<span>News & Bulletin</span>
 							<p>
@@ -152,7 +153,7 @@
 							</p>
 						</div>
 						<div class="main-msg multiple applynow">
-							<a href="#">
+							<a href="./forms.html">
 								<img src="https://media.giphy.com/media/MaDUoUduFzeiGOc4w7/giphy.gif">
 							</a>
 						</div>
