--- a/home.html
+++ b/home.html
@@ -86,14 +86,28 @@
 			<div class="body-content" id="bodyID">
 				<div class="slider" onload="autoChange()">
 					<div onclick="prevImage()" id = "prev_im" class="prev">
-						<i class="fas fa-chevron-left"></i>
+						&#10094
 					</div>
 
-					<img id = "slideImg" name = "main_img" src="imgs/heart_beat.jpg">
+					<img id = "slideImg" name = "main_img" src="imgs/1.jpg">
 
 					<div onclick="nextImage()" id = "next_im" class="next">
-						<i class="fas fa-chevron-right"></i>
+						&#10095
 					</div>
+				</div>
+				<div style="text-align:center" class="outerDot">
+  					<span class="dot" onclick="currentSlide(1)"></span>
+  					<span class="dot" onclick="currentSlide(2)"></span> 
+  					<span class="dot" onclick="currentSlide(3)"></span> 
+  					<span class="dot" onclick="currentSlide(4)"></span> 
+  					<span class="dot" onclick="currentSlide(5)"></span>
+  					<span class="dot" onclick="currentSlide(6)"></span>
+  					<span class="dot" onclick="currentSlide(7)"></span>
+  					<span class="dot" onclick="currentSlide(8)"></span>
+  					<span class="dot" onclick="currentSlide(9)"></span>
+  					<span class="dot" onclick="currentSlide(10)"></span>
+  					<span class="dot" onclick="currentSlide(11)"></span>
+  					<span class="dot" onclick="currentSlide(12)"></span>
 				</div>
 
 				<div class="outer-msg">
@@ -153,6 +167,7 @@
 						</div>
 						<div class="main-msg multiple applynow">
 							<a href="./forms.html">
+								<p>Click Here To</p>
 								<img src="https://media.giphy.com/media/MaDUoUduFzeiGOc4w7/giphy.gif">
 							</a>
 						</div>
