final without footer

--- a/Placement/session15-17.html
+++ b/Placement/session15-17.html
@@ -3,12 +3,12 @@
 <head>
 	<title> Ambey ITI - Home</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-	<link rel="icon" type="image/png" href="imgs/logo.png">
+	<link rel="icon" type="image/png" href="../imgs/logo.png">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/eaa78a3a83.js" crossorigin="anonymous"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/jscript.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<script type="text/javascript" src="../js/sub-jscript.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/placement.css">
 
 </head>
 <body>
@@ -22,7 +22,7 @@
 		<div class="main-body">
 			<div class="header">
 				<div class="divlogo">
-					<img src="imgs/logo-final.jpg" class="logo" id="logoID">
+					<img src="../imgs/logo-final.jpg" class="logo" id="logoID">
 				</div>
 			</div>
 
@@ -30,24 +30,24 @@
 				<nav class="navbar navbar-inverse" id="navbarID">
   					<div class="container-fluid">
     					<ul class="nav navbar-nav">
-      						<li class="active-link"><a href="#">Home</a></li>
+      						<li class="active-link"><a href="../home.html">Home</a></li>
       						<li class="dropdown">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Introduction
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
-          							<li><a href="./Introduction/history.html">History</a></li>
-          							<li><a href="./Introduction/Mission and Objective">Mission and Objective</a></li>
-          							<li><a href="./Introduction/Chairman and Members.html">Chairman and Members</a></li>
-          							<li><a href="./Introduction/Managing Society.html">Managing Society</a></li>
+          							<li><a href="../Introduction/history.html">History</a></li>
+          							<li><a href="../Introduction/Mission and Objective">Mission and Objective</a></li>
+          							<li><a href="../Introduction/Chairman and Members.html">Chairman and Members</a></li>
+          							<li><a href="../Introduction/Managing Society.html">Managing Society</a></li>
         						</ul>
       						</li>
       						<li class="dropdown">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Admission Criteria
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
-          							<li><a href="./Admission Criteria/Eligibility.html">Courses & Eligibility</a></li>
-          							<li><a href="./Admission Criteria/Trades Affiliated.html">Trades Affiliated</a></li>
-          							<li><a href="./Admission Criteria/Schemes">Schemes Running</a></li>
+          							<li><a href="../Admission Criteria/Eligibility.html">Courses & Eligibility</a></li>
+          							<li><a href="../Admission Criteria/Trades Affiliated.html">Trades Affiliated</a></li>
+          							<li><a href="../Admission Criteria/Schemes">Schemes Running</a></li>
         						</ul>
       						</li>
 
@@ -55,17 +55,17 @@
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Faculty
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
-          							<li><a href="./Faculty/Teaching Staff.html">Teaching Staff</a></li>
-          							<li><a href="./Faculty/Administrative Staff.html">Administrative Staff</a></li>
-          							<li><a href="./Faculty/Achievement.html">Achievement by Trainees</a></li>
+          							<li><a href="../Faculty/Teaching Staff.html">Teaching Staff</a></li>
+          							<li><a href="../Faculty/Administrative Staff.html">Administrative Staff</a></li>
+          							<li><a href="../Faculty/Achievement.html">Achievement by Trainees</a></li>
         						</ul>
       						</li>
       						<li class="dropdown">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Infrastructure
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
-          							<li><a href="./Infrastructure/Building.html">Building Workshop</a></li>
-          							<li><a href="./Infrastructure/Electric Power.html">Power Consumption</a></li>
+          							<li><a href="../Infrastructure/Building.html">Building Workshop</a></li>
+          							<li><a href="../Infrastructure/Electric Power.html">Power Consumption</a></li>
         						</ul>
       						</li>
       						<li><a href="./Library/library">Library</a></li>
@@ -73,21 +73,21 @@
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Quality Monitoring
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
-          							<li><a href="./Quality Monitoring/attendence.html">Attendence</a></li>
-          							<li><a href="./Quality Monitoring/Progress Card.html">Progress Card</a></li>
-          							<li><a href="./Quality Monitoring/record.html">Record of Trainees</a></li>
+          							<li><a href="../Quality Monitoring/attendence.html">Attendence</a></li>
+          							<li><a href="../Quality Monitoring/Progress Card.html">Progress Card</a></li>
+          							<li><a href="../Quality Monitoring/record.html">Record of Trainees</a></li>
         						</ul>
       						</li>
       						<li class="dropdown">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="./">Placement
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
-          							<li><a href="./Placement/session14-16.html">Session 14-16</a></li>
-          							<li><a href="./Placement/session15-17.html">Session 15-17</a></li>
-          							<li><a href="./Placement/session16-18.html">Session 16-18</a></li>
-          							<li><a href="./Placement/session17-19.html">Session 17-19</a></li>
-          							<li><a href="./Placement/session18-20.html">Session 18-20</a></li>
-          							<li><a href="./Placement/session19-21.html">Session 19-21</a></li>
+          							<li><a href="../Placement/session14-16.html">Session 14-16</a></li>
+          							<li><a href="../Placement/session15-17.html">Session 15-17</a></li>
+          							<li><a href="../Placement/session16-18.html">Session 16-18</a></li>
+          							<li><a href="../Placement/session17-19.html">Session 17-19</a></li>
+          							<li><a href="../Placement/session18-20.html">Session 18-20</a></li>
+          							<li><a href="../Placement/session19-21.html">Session 19-21</a></li>
         						</ul>
       						</li>
     					</ul>
@@ -101,7 +101,7 @@
 						&#10094
 					</div>
 
-					<img id = "slideImg" name = "main_img" src="imgs/1.jpg">
+					<img id = "slideImg" name = "main_img" src="../imgs/1.jpg">
 
 					<div onclick="nextImage()" id = "next_im" class="next">
 						&#10095
@@ -123,69 +123,78 @@
 				</div>
 
 				<div class="outer-msg">
-					<div class="msg">
-						<img src="imgs/chairman.jpeg">
-						<div class="main-msg">
-							<span>Chairman's Message</span>
-							<p>In the current era of knowledge based economy, ITI education is to play a vital role in the socio-economic development of the country. The emergence of New India has created a palpable need for a large number of professionally trained young men and women having expertise in all field with hallmark of adaptability, quality consciousness, discipline and commitment to boost country's economic growth. <br> <span>- Soni Singh</span> </p>
-
-						</div>
-					</div>
+					<p class="heading">Placement Record Session 2015-17</p>
+					<table class="table table-bordered">
+					    <tbody>
+					    	<tr>
+					    		<th>Sr. No.</th>
+					    		<th>Roll No.</th>
+					    		<th>Name</th>
+					    		<th>Trade</th>
+					    		<th>Year of Passing</th>
+					    		<th>Organisation Name</th>
+					    		<th>Joining Salary</th>
+					    	</tr>
+					      	<tr>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>		
+					        	<td></td>
+					        	<td></td>	
+					        	<td></td>				        			      
+					      	</tr>
+					      	<tr>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>		
+					        	<td></td>
+					        	<td></td>	
+					        	<td></td>		      
+					      	</tr>
+					      	<tr>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>	
+					        	<td></td>	
+					        	<td></td>	
+					        	<td></td>		      
+					      	</tr>
+					      	<tr>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>		
+					        	<td></td>	
+					        	<td></td>	
+					        	<td></td>	      
+					      	</tr>
+					      	<tr>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>		
+					        	<td></td>		
+					        	<td></td>      
+					      	</tr>
+					      	<tr>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>
+					        	<td></td>		
+					        	<td></td>		
+					        	<td></td>      
+					      	</tr>			     
+					    </tbody>
+					</table>
 					<hr>
-					<div class="msg">
-						<img src="imgs/director.jpeg">
-						<div class="main-msg">
-							<span>Director's Message</span>
-							<p>Saumya Industrial Training Institute, B-58, HIG, Petrol Line, World Bank, Kanpur, U.P is a sure success destination for trainees who want to excel in the present industrial scenario going in the country and worldwide. The Trained Trainees of Saumya Industrial Training Institute are employable and are being employed as these are trained to be industry ready are self-employed and are giving employment to other. <br> <span>- KB Singh</span> </p></p>
-						</div>
-					</div>
-					<hr>
-					<div class="msg multiple">
-						<img src="imgs/student.png">
-						<div class="main-msg multiple">
-							<span>Student Support</span>
-							<p>
-								<ul>
-									<li><a href="#">Placements</a></li>
-									<li><a href="#">Guidance and Counselling</a></li>
-									<li><a href="#">Skill Development</a></li>
-								</ul>
-							</p>
-						</div>
-
-						<img src="imgs/admission.png">
-						<div class="main-msg multiple">
-							<span>Courses Offered</span>
-							<p>
-								<ul>
-									<li><a href="#">Fitter</a></li>
-									<li><a href="#">Electrician</a></li>
-								</ul>
-							</p>
-						</div>
-					</div>
-					<hr>
-					<div class="msg multiple">
-						<img src="imgs/news.png">
-						<div class="main-msg multiple">
-							<span>News & Bulletin</span>
-							<p>
-								<ul>
-									<li><a href="#">Admissions @ 2020</a></li>
-									<li><a href="#">Guidance</a></li>
-									<li><a href="#">Lava</a></li>
-								</ul>
-							</p>
-						</div>
-						<div class="main-msg multiple applynow">
-							<a href="./forms.html">
-								<p>Click Here To</p>
-								<img src="https://media.giphy.com/media/MaDUoUduFzeiGOc4w7/giphy.gif">
-							</a>
-						</div>
-					</div>
 				</div>
 			</div>
+
 			<div class="footer" id="footerID">
 				<div class = "top">
 					<div class="footerHead">Reach Us
