mostly final with everything correct

--- a/Introduction/Managing Society.html
+++ b/Introduction/Managing Society.html
@@ -30,45 +30,64 @@
 				<nav class="navbar navbar-inverse" id="navbarID">
   					<div class="container-fluid">
     					<ul class="nav navbar-nav">
-      						<li><a href="#">Home</a></li>
+      						<li><a href="../home.html">Home</a></li>
       						<li class="dropdown active-link">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Introduction
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
-          							<li><a href="#">History</a></li>
-          							<li><a href="#">Mission and Objective</a></li>
-          							<li><a href="#">Chairman and Members</a></li>
-          							<li><a href="#">Managing Society</a></li>
+          							<li><a href="../Introduction/history.html">History</a></li>
+          							<li><a href="../Introduction/Mission and Objective">Mission and Objective</a></li>
+          							<li><a href="../Introduction/Chairman and Members.html">Chairman and Members</a></li>
+          							<li><a href="../Introduction/Managing Society.html">Managing Society</a></li>
         						</ul>
       						</li>
-      						<li><a href="#">Admission Criteria</a></li>
+      						<li class="dropdown">
+        						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Admission Criteria
+        						<span class="caret"></span></a>
+        						<ul class="dropdown-menu">
+          							<li><a href="../Admission Criteria/Eligibility.html">Courses & Eligibility</a></li>
+          							<li><a href="../Admission Criteria/Trades Affiliated.html">Trades Affiliated</a></li>
+          							<li><a href="../Admission Criteria/Schemes">Schemes Running</a></li>
+        						</ul>
+      						</li>
+
       						<li class="dropdown">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Faculty
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
-          							<li><a href="#">Teaching Staff</a></li>
-          							<li><a href="#">Administrative Staff</a></li>
-          							<li><a href="#">Achievemnt by Trainees</a></li>
+          							<li><a href="../Faculty/Teaching Staff.html">Teaching Staff</a></li>
+          							<li><a href="../Faculty/Administrative Staff.html">Administrative Staff</a></li>
+          							<li><a href="../Faculty/Achievement.html">Achievement by Trainees</a></li>
         						</ul>
       						</li>
-      						<li><a href="#">Infrastructure</a></li>
-      						<li><a href="#">Admission Criteria</a></li>
+      						<li class="dropdown">
+        						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Infrastructure
+        						<span class="caret"></span></a>
+        						<ul class="dropdown-menu">
+          							<li><a href="../Infrastructure/Building.html">Building Workshop</a></li>
+          							<li><a href="../Infrastructure/Electric Power.html">Power Consumption</a></li>
+        						</ul>
+      						</li>
+      						<li><a href="./Library/library">Library</a></li>
       						<li class="dropdown">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Quality Monitoring
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
-          							<li><a href="#">Page 1-1</a></li>
-          							<li><a href="#">Page 1-2</a></li>
-          							<li><a href="#">Page 1-3</a></li>
+          							<li><a href="../Quality Monitoring/attendence.html">Attendence</a></li>
+          							<li><a href="../Quality Monitoring/Progress Card.html">Progress Card</a></li>
+          							<li><a href="../Quality Monitoring/record.html">Record of Trainees</a></li>
         						</ul>
       						</li>
       						<li class="dropdown">
-        						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Placement
+        						<a class="dropdown-toggle" data-toggle="dropdown" href="./">Placement
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
-          							<li><a href="#">Page 1-1</a></li>
-          							<li><a href="#">Page 1-2</a></li>
-          							<li><a href="#">Page 1-3</a></li>
+          							<li><a href="../Placement/session14-16.html">Session 14-16</a></li>
+          							<li><a href="../Placement/session15-17.html">Session 15-17</a></li>
+          							<li><a href="../Placement/session16-18.html">Session 16-18</a></li>
+          							<li><a href="../Placement/session17-19.html">Session 17-19</a></li>
+          							<li><a href="../Placement/session18-20.html">Session 18-20</a></li>
+          							<li><a href="../Placement/session19-21.html">Session 19-21</a></li>
         						</ul>
       						</li>
     					</ul>
