--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
           							<li><a href="./Introduction/history.html">History</a></li>
-          							<li><a href="./Introduction/Mission and Objective">Mission and Objective</a></li>
+          							<li><a href="./Introduction/Mission and Objective.html">Mission and Objective</a></li>
           							<li><a href="./Introduction/Chairman and Members.html">Chairman and Members</a></li>
           							<li><a href="./Introduction/Managing Society.html">Managing Society</a></li>
         						</ul>
