--- a/Admission Criteria/Schemes.html
+++ b/Admission Criteria/Schemes.html
@@ -30,7 +30,7 @@
 				<nav class="navbar navbar-inverse" id="navbarID">
   					<div class="container-fluid">
     					<ul class="nav navbar-nav">
-      						<li class="active-link"><a href="../home.html">Home</a></li>
+      						<li><a href="../home.html">Home</a></li>
       						<li class="dropdown">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Introduction
         						<span class="caret"></span></a>
@@ -41,7 +41,7 @@
           							<li><a href="../Introduction/Managing Society.html">Managing Society</a></li>
         						</ul>
       						</li>
-      						<li class="dropdown">
+      						<li class="dropdown active-link">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Admission Criteria
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
