--- a/Faculty/Teaching Staff.html
+++ b/Faculty/Teaching Staff.html
@@ -30,7 +30,7 @@
 				<nav class="navbar navbar-inverse" id="navbarID">
   					<div class="container-fluid">
     					<ul class="nav navbar-nav">
-      						<li class="active-link"><a href="../home.html">Home</a></li>
+      						<li><a href="../home.html">Home</a></li>
       						<li class="dropdown">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Introduction
         						<span class="caret"></span></a>
@@ -51,7 +51,7 @@
         						</ul>
       						</li>
 
-      						<li class="dropdown">
+      						<li class="dropdown active-link">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Faculty
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
