--- a/Infrastructure/Electric Power.html
+++ b/Infrastructure/Electric Power.html
@@ -30,7 +30,7 @@
 				<nav class="navbar navbar-inverse" id="navbarID">
   					<div class="container-fluid">
     					<ul class="nav navbar-nav">
-      						<li class="active-link"><a href="../home.html">Home</a></li>
+      						<li><a href="../home.html">Home</a></li>
       						<li class="dropdown">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Introduction
         						<span class="caret"></span></a>
@@ -60,7 +60,7 @@
           							<li><a href="../Faculty/Achievement.html">Achievement by Trainees</a></li>
         						</ul>
       						</li>
-      						<li class="dropdown">
+      						<li class="dropdown active-link">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Infrastructure
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
