--- a/Introduction/Chairman and Members.html
+++ b/Introduction/Chairman and Members.html
@@ -30,8 +30,8 @@
 				<nav class="navbar navbar-inverse" id="navbarID">
   					<div class="container-fluid">
     					<ul class="nav navbar-nav">
-      						<li class="active-link"><a href="../home.html">Home</a></li>
-      						<li class="dropdown">
+      						<li><a href="../home.html">Home</a></li>
+      						<li class="dropdown active-link">
         						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Introduction
         						<span class="caret"></span></a>
         						<ul class="dropdown-menu">
