--- a/Introduction/Managing Society.html
+++ b/Introduction/Managing Society.html
@@ -127,23 +127,23 @@
 					<table class="table table-bordered">
 					    <tbody>
 					      	<tr>
-					        	<td>1</td>
-					        	<td>Name of the Society</td>
+					        	<td class="bold">1</td>
+					        	<td class="bold">Name of the Society</td>
 					        	<td>Industrial Training & Research Co-operation Society</td>
 					      	</tr>
 					      	<tr>
-					        	<td>2</td>
-					        	<td>Registration Number</td>
+					        	<td class="bold">2</td>
+					        	<td class="bold">Registration Number</td>
 					        	<td>633,  dated 28 July, 2009</td>
 					      	</tr>
 					      	<tr>
-					        	<td>3</td>
-					        	<td>Scanned Copy of Certificates</td>
+					        	<td class="bold">3</td>
+					        	<td class="bold">Scanned Copy of Certificates</td>
 					        	<td></td>
 					      	</tr>
 					      	<tr>
-					        	<td>4</td>
-					        	<td>Remarks</td>
+					        	<td class="bold">4</td>
+					        	<td class="bold">Remarks</td>
 					        	<td></td>
 					      	</tr>					     
 					    </tbody>
