--- a/Introduction/history.html
+++ b/Introduction/history.html
@@ -140,43 +140,43 @@
 					<table class="table table-bordered">
 					    <tbody>
 					      	<tr>
-					        	<td>1</td>
-					        	<td>Name of the Institute</td>
+					        	<td class="bold">1</td>
+					        	<td class="bold">Name of the Institute</td>
 					        	<td>Ambey Private Industrial Training Institute</td>
 					      	</tr>
 					      	<tr>
-					        	<td>2</td>
-					        	<td>Adress of the Insitute</td>
+					        	<td class="bold">2</td>
+					        	<td class="bold">Adress of the Insitute</td>
 					        	<td>PO : Dhobha Bazar, Dist : Bhojpur, Bihar</td>
 					      	</tr>
 					      	<tr>
-					        	<td>3</td>
-					        	<td>Date of the Establishment</td>
+					        	<td class="bold">3</td>
+					        	<td class="bold">Date of the Establishment</td>
 					        	<td>25th Feb, 2012</td>
 					      	</tr>
 					      	<tr>
-					        	<td>4</td>
-					        	<td>DGET File Reference No.</td>
+					        	<td class="bold">4</td>
+					        	<td class="bold">DGET File Reference No.</td>
 					        	<td>DGET - 6/4/8/2014 - TC</td>
 					      	</tr>
 					      	<tr>
-					        	<td>5</td>
-					        	<td>Code Allotted by DGET</td>
+					        	<td class="bold">5</td>
+					        	<td class="bold">Code Allotted by DGET</td>
 					        	<td>PR 10000632</td>
 					      	</tr>
 					      	<tr>
-					        	<td>6</td>
-					        	<td>Contact Number</td>
+					        	<td class="bold">6</td>
+					        	<td class="bold">Contact Number</td>
 					        	<td>7042550448/td>
 					      	</tr>
 					      	<tr>
-					        	<td>7</td>
-					        	<td>Email ID</td>
+					        	<td class="bold">7</td>
+					        	<td class="bold">Email ID</td>
 					        	<td>ambeyitidhobha@gmail.com</td>
 					      	</tr>
 					      	<tr>
-					        	<td>8</td>
-					        	<td>Location (Rural/Urban)</td>
+					        	<td class="bold">8</td>
+					        	<td class="bold">Location (Rural/Urban)</td>
 					        	<td>DGET - 6/4/8/2014 - TC</td>
 					      	</tr>
 					    </tbody>
